--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -20,35 +20,32 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
-    flex-wrap: wrap;
+    padding: 20px;
     box-sizing: border-box;
+    flex-wrap: wrap;
 }
 
 h1 {
-    flex: 1;
     color: #e8f5e9;
     text-align: center;
-    margin: 0 20%;
-    margin-left: 13%;
-    margin-right: 10%;
+    margin: 0;
 }
 
-.logo img, h1 img {
+h1 img {
     width: 50px;
     height: auto;
     vertical-align: middle;
-    margin-right: 0px;
+    margin-right: 10px;
 }
 
-/* Navigation Menu */
+/* Navigation */
 .nav-menu {
-    display: none; /* Hide menu by default */
+    display: none;
     flex-direction: column;
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: 0;
     right: 0;
     padding: 10px 0;
@@ -57,17 +54,17 @@ h1 {
 }
 
 .nav-menu.active {
-    display: flex; /* Show menu when active */
+    display: flex;
     transform: translateY(0);
 }
 
 nav ul {
     list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
 }
 
@@ -84,12 +81,14 @@ nav ul li a:hover {
 
 /* Menu Icon for all screen sizes */
 .menu-icon {
-    display: block; /* Always display the menu icon */
+    display: block;
     font-size: 30px;
     color: #e8f5e9;
     cursor: pointer;
     padding: 10px;
 }
+
+/* Discovery Page Modal Styling */
 
 /* Footer */
 footer {
