--- a/chamber/styles/discovery-modal.css
+++ b/chamber/styles/discovery-modal.css
@@ -71,7 +71,7 @@
 .place-card:nth-child(7) { grid-area: card7; }
 .place-card:nth-child(8) { grid-area: card8; }
 
-/* Styling for images - lazy loading handled in HTML/JS */
+/* Styling for images - lazy loading */
 .place-image {
     width: 100%;
     height: 150px;
@@ -194,13 +194,9 @@ section {
     margin-bottom: 20px;
 }
 
-/* Hide card information by default */
+
 .card-info {
     display: none;
     transition: all 0.3s ease-in-out;
 }
 
-/* Show card information when the card is active */
-.place-card.active .card-info {
-    display: block;
-}
