--- a/final_project/styles/home.css
+++ b/final_project/styles/home.css
@@ -601,7 +601,7 @@ footer {
 }
 
 .travel-card {
-    background: #6e6d6d;
+    background: #771f1f;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -654,13 +654,14 @@ footer {
     display: inline-block;
     margin-top: 10px;
     padding: 8px 12px;
-    background: #0073e6;
-    color: white;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     border-radius: 5px;
     transition: background 0.3s ease-in-out;
 }
 
 .visit-button:hover {
-    background: #005bb5;
+    background: #da6bb1;
 }
+
